# zeptobot

./: CLAUDE.md  README.md  index.html  package.json
extension/: background.js  manifest.json  popup.html  popup.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: test_keypress.rs
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/services/: agent.rs  automation.rs  mod.rs
src-tauri/src/tools/: automation.rs  ax.rs  ax_tools.rs  browser.rs  mod.rs  screenshot.rs
