[package]
name = "zeptobot"
version = "0.1.0"
description = "Voice-controlled AI desktop assistant"
authors = ["Kitakod Ventures"]
edition = "2021"

[lib]
name = "zeptobot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
autopilot = "0.4"
zeptoclaw = "0.7.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
tokio-util = "0.7"
chromiumoxide = "0.9"
futures-util = "0.3"
tokio-tungstenite = "0.24"
